--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="white_1">#E0E0E0</color>
     <color name="white_2">#CCCCCC</color>
     <color name="white_3">#858585</color>
+    <color name="white_4">#E3E3E3</color>
 
     <color name="gray_0">#2A2A2A</color>
     <color name="gray_1">#333333</color>
