--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -50,12 +50,28 @@
     <style name="MyEmulatorTextView" parent="@android:style/TextAppearance.Widget.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">10dp</item>
-        <item name="android:layout_marginBottom">6dp</item>
-        <item name="android:layout_marginStart">12dp</item>
-        <item name="android:layout_marginEnd">12dp</item>
         <item name="android:textColor">@color/pink</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="MyRegisterItemKeyStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/gray_1</item>
+        <item name="android:fontFamily">@font/source_code_pro_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="MyRegisterItemValueStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/bg_indiv_register</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:textColor">@color/gray_1</item>
+        <item name="android:fontFamily">@font/source_code_pro_regular</item>
         <item name="android:textSize">16sp</item>
     </style>
 </resources>
