--- a/app/src/main/res/layout/activity_emulate.xml
+++ b/app/src/main/res/layout/activity_emulate.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <include
-                android:id="@+id/layout_general"
+                android:id="@+id/layout_registers"
                 layout="@layout/layout_registers"/>
             <include
                 android:id="@+id/layout_segments"
