--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Recent Activity"
+            android:text="Recent Activities"
             android:textColor="@color/gray_0"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="14dp"
@@ -37,56 +37,34 @@
             android:background="@color/gray_2"
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="4dp"/>
-        <FrameLayout
+        <ListView
+            android:id="@+id/lv_recent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="14dp"
-            android:layout_marginBottom="4dp">
-            <TextView
-                android:id="@+id/tv_recent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lines="10"
-                android:maxLines="10"
-                android:padding="4dp"
-                android:textColor="@color/gray_4"
-                android:ellipsize="end"/>
-            <TextView
-                android:id="@+id/tv_nothing"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginBottom="10dp"
+            android:divider="@color/black"/>
+        <LinearLayout
+            android:id="@+id/ll_create_new"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/bg_gray_border"
+            android:layout_marginHorizontal="12dp"
+            android:padding="12dp"
+            android:gravity="center">
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/gray_4"
-                android:text="Nothing to show"
-                android:layout_gravity="center"/>
-        </FrameLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/gray_3"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginBottom="8dp"/>
-        <FrameLayout
-            android:id="@+id/fl_edit"
-            style="@style/MyFrameLayout">
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/ic_edit_1"/>
+                android:src="@drawable/ic_baseline_add_24"/>
             <TextView
-                android:text="Edit"
-                style="@style/MyTextViewStyle"/>
-        </FrameLayout>
-        <FrameLayout
-            android:id="@+id/fl_open_file"
-            style="@style/MyFrameLayout">
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/ic_file"/>
-            <TextView
-                android:text="Open File"
-                style="@style/MyTextViewStyle"/>
-        </FrameLayout>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create New"
+                android:textSize="16sp"
+                android:textColor="@color/black"/>
+        </LinearLayout>
+
     </LinearLayout>
 
 
