--- a/app/src/main/res/menu/activity_editor_options.xml
+++ b/app/src/main/res/menu/activity_editor_options.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/paste"
+        android:icon="@drawable/ic_baseline_content_paste_24"
+        app:showAsAction="always"
+        android:title="Paste"/>
+    <item
         android:id="@+id/undo"
         android:icon="@drawable/ic_undo"
         app:showAsAction="always"
@@ -14,6 +19,9 @@
     <item
         android:id="@+id/compile"
         android:title="Compile"/>
+    <item
+        android:id="@+id/save"
+        android:title="Save"/>
     <item
         android:id="@+id/reset"
         android:title="Reset"/>
