--- a/app/src/main/res/layout/activity_emulate.xml
+++ b/app/src/main/res/layout/activity_emulate.xml
@@ -143,6 +143,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/btn_exec"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
