--- a/app/src/main/res/layout/layout_registers.xml
+++ b/app/src/main/res/layout/layout_registers.xml
@@ -29,19 +29,15 @@
         android:layout_marginHorizontal="8dp"
         android:background="@color/white">
         <TableRow
-            android:padding="4dp">
+            android:layout_margin="4dp">
             <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="AH"/>
-            <TextView
-                style="@style/MyRegisterItemValueStyle"
-                android:text="0A"/>
-            <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="AL"/>
+                style="@style/MyRegisterItemKeyStyle"/>
             <TextView
                 style="@style/MyRegisterItemValueStyle"
-                android:text="0A"/>
+                android:text="H"/>
+            <TextView
+                style="@style/MyRegisterItemValueStyle"
+                android:text="L"/>
         </TableRow>
         <TableRow
             android:layout_height="1dp"
@@ -51,19 +47,16 @@
                 android:layout_height="1dp"/>
         </TableRow>
         <TableRow
-            android:padding="4dp">
+            android:layout_margin="4dp">
             <TextView
                 style="@style/MyRegisterItemKeyStyle"
-                android:text="CH"/>
+                android:text="AX"/>
             <TextView
-                style="@style/MyRegisterItemValueStyle"
-                android:text="0A"/>
+                android:id="@+id/ah"
+                style="@style/MyRegisterItemValueStyle"/>
             <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="CL"/>
-            <TextView
-                style="@style/MyRegisterItemValueStyle"
-                android:text="0A"/>
+                android:id="@+id/al"
+                style="@style/MyRegisterItemValueStyle"/>
         </TableRow>
         <TableRow
             android:layout_height="1dp"
@@ -73,19 +66,16 @@
                 android:layout_height="1dp"/>
         </TableRow>
         <TableRow
-            android:padding="4dp">
+            android:layout_margin="4dp">
             <TextView
                 style="@style/MyRegisterItemKeyStyle"
-                android:text="DH"/>
+                android:text="CX"/>
             <TextView
-                style="@style/MyRegisterItemValueStyle"
-                android:text="0A"/>
+                android:id="@+id/ch"
+                style="@style/MyRegisterItemValueStyle"/>
             <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="DL"/>
-            <TextView
-                style="@style/MyRegisterItemValueStyle"
-                android:text="0A"/>
+                android:id="@+id/cl"
+                style="@style/MyRegisterItemValueStyle"/>
         </TableRow>
         <TableRow
             android:layout_height="1dp"
@@ -95,19 +85,35 @@
                 android:layout_height="1dp"/>
         </TableRow>
         <TableRow
-            android:padding="4dp">
+            android:layout_margin="4dp">
             <TextView
                 style="@style/MyRegisterItemKeyStyle"
-                android:text="BH"/>
+                android:text="DX"/>
             <TextView
-                style="@style/MyRegisterItemValueStyle"
-                android:text="0A"/>
+                android:id="@+id/dh"
+                style="@style/MyRegisterItemValueStyle"/>
+            <TextView
+                android:id="@+id/dl"
+                style="@style/MyRegisterItemValueStyle"/>
+        </TableRow>
+        <TableRow
+            android:layout_height="1dp"
+            android:background="@color/white_2">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+        </TableRow>
+        <TableRow
+            android:layout_margin="4dp">
             <TextView
                 style="@style/MyRegisterItemKeyStyle"
-                android:text="BL"/>
+                android:text="BX"/>
             <TextView
-                style="@style/MyRegisterItemValueStyle"
-                android:text="0A"/>
+                android:id="@+id/bh"
+                style="@style/MyRegisterItemValueStyle"/>
+            <TextView
+                android:id="@+id/bl"
+                style="@style/MyRegisterItemValueStyle"/>
         </TableRow>
     </TableLayout>
 </LinearLayout>
