--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -61,7 +61,7 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/gray_1</item>
         <item name="android:fontFamily">@font/source_code_pro_regular</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
     </style>
     <style name="MyRegisterItemValueStyle">
         <item name="android:layout_width">wrap_content</item>
@@ -70,8 +70,16 @@
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
         <item name="android:layout_weight">2</item>
-        <item name="android:textColor">@color/gray_1</item>
+        <item name="android:textColor">@color/gray_4</item>
         <item name="android:fontFamily">@font/source_code_pro_regular</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:text">00</item>
+    </style>
+    <style name="MySettingsTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/gray_1</item>
+        <item name="android:layout_centerVertical">true</item>
     </style>
 </resources>
