--- a/app/src/main/res/layout/item_recent_activity.xml
+++ b/app/src/main/res/layout/item_recent_activity.xml
@@ -2,35 +2,42 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/ripple"
     android:padding="8dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toStartOf="@id/iv_edit"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tv_file_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TestFile.asm"
-            android:textSize="16sp"
+            tools:text="test.txt"
+            android:textSize="15sp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textColor="@color/black"
             android:textStyle="bold"/>
         <TextView
-            android:id="@+id/tv_body"
+            android:id="@+id/tv_file_path"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="MOV Al,0Ah\nADD AL,BL ..."
-            android:maxLines="2"
+            tools:text="/storage/test.txt"
+            android:maxLines="1"
             android:ellipsize="end"
             android:textSize="13sp"
-            android:textColor="@color/gray_4"/>
+            android:textColor="@color/gray_4"
+            android:textStyle="italic"/>
     </LinearLayout>
+
     <ImageView
         android:id="@+id/iv_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/ic_baseline_edit_24"/>
+        android:layout_marginStart="10dp"
+        android:src="@drawable/ic_baseline_edit_24" />
 </RelativeLayout>
