--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_1"
+    android:background="@drawable/bg_app_gradient"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
@@ -25,66 +25,88 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Recent Activities"
-            android:textColor="@color/gray_0"
+            android:text="Recent Files"
+            android:textColor="@color/white_0"
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="14dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="8dp"
             android:textSize="16sp"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@color/gray_2"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginBottom="4dp"/>
         <ListView
             android:id="@+id/list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginBottom="10dp"
-            android:divider="@color/black"/>
+            android:layout_marginBottom="20dp"
+            android:divider="#00000000"
+            android:dividerHeight="6dp"
+            android:scrollbars="none"
+            android:clickable="true"
+            android:focusable="true"/>
         <LinearLayout
-            android:id="@+id/ll_create_new"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/bg_gray_border"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginBottom="10dp"
-            android:padding="12dp"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_create_new"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_add_24"/>
-            <TextView
-                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="4dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:paddingHorizontal="8dp"
+                    android:background="@color/white_0"
+                    android:paddingVertical="20dp">
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:src="@drawable/ic_plus"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Create New"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_open_file"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Create New"
-                android:textSize="15sp"
-                android:textColor="@color/black"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/ll_open_file"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/bg_gray_border"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginBottom="10dp"
-            android:padding="12dp"
-            android:gravity="center">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_add_24"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Open File"
-                android:textSize="15sp"
-                android:textColor="@color/black"/>
+                android:layout_weight="1"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="4dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:background="@color/white_0"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:paddingHorizontal="8dp"
+                    android:paddingVertical="20dp">
+                    <ImageView
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:src="@drawable/ic_folder"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Open File"
+                        android:textSize="15sp"
+                        android:textColor="@color/black"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
     </LinearLayout>
