--- a/app/src/main/res/layout/item_recent_activity.xml
+++ b/app/src/main/res/layout/item_recent_activity.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/ripple"
+    android:background="@drawable/bg_app_item"
     android:padding="8dp">
     <LinearLayout
         android:layout_width="match_parent"
