--- a/app/src/main/res/menu/activity_editor_options.xml
+++ b/app/src/main/res/menu/activity_editor_options.xml
@@ -18,6 +18,8 @@
         android:title="Redo"/>
     <item
         android:id="@+id/compile"
+        android:icon="@drawable/ic_baseline_play_arrow_24_white"
+        app:showAsAction="always"
         android:title="Compile"/>
     <item
         android:id="@+id/save"
