--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,4 +19,15 @@
 <!--        <item name="colorPrimary">@color/purple_500</item>-->
 <!--        <item name="colorSecondary">@color/purple_500</item>-->
 <!--    </style>-->
+    <style name="MyEmulatorTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/app_purple</item>
+        <item name="colorSecondary">@color/app_blue</item>
+    </style>
+
+    <style name="MyEmulatorTheme2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/app_purple</item>
+        <item name="colorSecondary">@color/app_blue</item>
+    </style>
 </resources>
