--- a/app/src/main/res/layout/layout_registers.xml
+++ b/app/src/main/res/layout/layout_registers.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white_2">
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginBottom="4dp"
+    android:background="@drawable/bg_exec_mini">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,12 +15,13 @@
         <TextView
             style="@style/MyEmulatorTextView"
             android:text="Registers" />
+
         <ImageView
             android:id="@+id/iv_expand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_expand_more_24"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_baseline_expand_more_24" />
     </RelativeLayout>
     <TableLayout
         android:id="@+id/table_layout"
