--- a/app/src/main/res/layout/activity_emulate.xml
+++ b/app/src/main/res/layout/activity_emulate.xml
@@ -1,23 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_1">
-
-
-    <ScrollView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/bg_app_gradient"
+    android:theme="@style/MyEmulatorTheme">
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_corner_bottom_black_filled"
+        app:elevation="0dp">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_exec_mini_extra_corner"
+            android:layout_margin="10dp">
+            <TextView
+                android:id="@+id/tv_exec"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MOV AL,BL"
+                android:layout_margin="10dp"
+                android:fontFamily="@font/source_code_pro_regular"
+                android:textColor="@color/gray_2"
+                android:textStyle="bold"
+                android:textSize="14sp"/>
+        </RelativeLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/ll_exec"
         android:layout_alignParentTop="true"
-        android:paddingTop="16dp"
-        android:scrollbars="none">
-
-        <com.jmedeisis.draglinearlayout.DragLinearLayout
-            android:id="@+id/drag_linear_layout"
+        android:scrollbars="none"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="8dp"/>
             <include
                 android:id="@+id/layout_registers"
                 layout="@layout/layout_registers"/>
@@ -30,143 +59,20 @@
             <include
                 android:id="@+id/layout_flags"
                 layout="@layout/layout_flags"/>
-        </com.jmedeisis.draglinearlayout.DragLinearLayout>
-    </ScrollView>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
-    <LinearLayout
-        android:id="@+id/ll_exec"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btn_exec"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white_2"
-        android:orientation="vertical"
-        android:paddingBottom="8dp">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="8dp"
-            android:background="@color/gray_4"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="16dp">
-
-            <TextView
-                android:id="@+id/tv_exec_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/tv_exec"
-                android:layout_margin="4dp"
-                android:text="Executing:"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/tv_exec"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:layout_alignParentEnd="true"
-                android:layout_toEndOf="@+id/tv_exec_label"
-                android:background="@drawable/bg_exec_mini"
-                android:fontFamily="@font/source_code_pro_regular"
-                android:paddingHorizontal="8dp"
-                android:paddingVertical="4dp"
-                android:text="MOV AL,0Ah"
-                android:textColor="@color/gray_1"
-                android:textSize="16sp" />
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginBottom="8dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_yellow_border"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="@drawable/ripple"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="6dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_call_missed_24" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Step Back"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_pink_border"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="@drawable/ripple"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="6dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_browser_updated_24" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Execute All"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/btn_exec"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_green"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="@drawable/ripple_green"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="8dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_play_arrow_24" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Execute"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
-        </LinearLayout>
-    </LinearLayout>
-</RelativeLayout>
+        android:layout_gravity="bottom|end"
+        android:background="@drawable/bg_exec_button"
+        android:drawableStart="@drawable/ic_baseline_play_arrow_24"
+        android:textColor="@color/gray_1"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="18dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="10dp"
+        android:text="Execute Line"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
