--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_app_gradient"
+    android:theme="@style/MyEmulatorTheme"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
@@ -18,9 +19,10 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/gray_0"
             android:id="@+id/toolbar"
+            android:backgroundTint="@android:color/transparent"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:elevation="4dp"/>
+            android:elevation="0dp"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -38,33 +40,30 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="20dp"
             android:divider="#00000000"
-            android:dividerHeight="6dp"
+            android:dividerHeight="3dp"
             android:scrollbars="none"
             android:clickable="true"
-            android:focusable="true"/>
+            android:focusable="true"
+            tools:listitem="@layout/item_recent_activity"
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:orientation="horizontal">
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_create_new"
+            <LinearLayout
+                android:id="@+id/ll_create_new"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="8dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="4dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:paddingHorizontal="8dp"
-                    android:background="@color/white_0"
-                    android:paddingVertical="20dp">
+                android:layout_marginEnd="4dp"
+                android:orientation="vertical"
+                android:paddingVertical="20dp"
+                android:gravity="center"
+                android:paddingHorizontal="8dp"
+                android:background="@drawable/bg_white_cornered_clickable">
+
                     <ImageView
                         android:layout_width="28dp"
                         android:layout_height="28dp"
@@ -75,38 +74,31 @@
                         android:text="Create New"
                         android:textSize="15sp"
                         android:textColor="@color/black"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_open_file"
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_open_file"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="8dp"
+                android:layout_marginStart="4dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginStart="4dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:background="@color/white_0"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:paddingHorizontal="8dp"
-                    android:paddingVertical="20dp">
-                    <ImageView
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:src="@drawable/ic_folder"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Open File"
-                        android:textSize="15sp"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+                android:orientation="vertical"
+                android:paddingVertical="20dp"
+                android:gravity="center"
+                android:paddingHorizontal="8dp"
+                android:background="@drawable/bg_white_cornered_clickable">
+
+                <ImageView
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:src="@drawable/ic_folder"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Open File"
+                    android:textSize="15sp"
+                    android:textColor="@color/black"/>
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
@@ -122,5 +114,6 @@
         app:headerLayout="@layout/nav_header_main"
         app:itemTextColor="@color/black"
         app:itemIconTint="@color/black"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"
+        app:itemBackground="@drawable/bg_white_cornered_clickable"/>
 </androidx.drawerlayout.widget.DrawerLayout>
