--- a/app/src/main/res/layout/item_template.xml
+++ b/app/src/main/res/layout/item_template.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginBottom="5dp"
     android:background="@drawable/bg_app_item">
     <TextView
         android:id="@+id/tv_title"
