--- a/app/src/main/res/layout/activity_emulate.xml
+++ b/app/src/main/res/layout/activity_emulate.xml
@@ -21,12 +21,22 @@
             android:background="@drawable/bg_exec_mini_extra_corner"
             android:layout_margin="10dp">
             <TextView
+                android:id="@+id/tv_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Next:"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/fira_code_regular"
+                android:textColor="@color/gray_2"/>
+            <TextView
+                android:layout_toEndOf="@id/tv_next"
                 android:id="@+id/tv_exec"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="MOV AL,BL"
                 android:layout_margin="10dp"
-                android:fontFamily="@font/source_code_pro_regular"
+                android:fontFamily="@font/fira_code_regular"
                 android:textColor="@color/gray_2"
                 android:textStyle="bold"
                 android:textSize="14sp"/>
@@ -74,5 +84,5 @@
         android:paddingHorizontal="18dp"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="10dp"
-        android:text="Execute Line"/>
+        android:text="Execute Next"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
